--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cycler==0.11.0
 dnspython==2.3.0
 Flask==2.3.2
 fonttools==4.39.4
+gunicorn==20.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.2.0
